Archive2/e2/2719dacabeceda/output
main.cpp:10:18: error: expected expression
    std::cout << @@@@
                 ^
1 error generated.
