Archive2/e2/2719dacabeceda/main.cpp
// Modifier le code suivant pour afficher les messages demandés

#include <iostream>

int main() {
    // Modifier la ligne suivante pour afficher "Bienvenue tout le monde !"
    std::cout << "Hello, world!" << std::endl;
    
    // Ajouter UNE ligne pour afficher "Bienvenue !" et "Tout le monde !" sur DEUX lignes
    std::cout << @@@@
    
    // Ajouter DEUX lignes pour afficher "Bienvenue !" et "Tout le monde !" sur UNE ligne
    std::cout << @@@@
    std::cout << @@@@
    
    return 0;
}